// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dkrFOg IsHIT"
>
  <div
    className="sc-eDvSVe dXemcg"
  >
    <span
      className="sc-jSUZER"
    >
      0
    </span>
    <span
      className="sc-gKPRtg PXMhH"
    >
      42
    </span>
  </div>
  <button
    className="sc-bcXHqe sc-gswNZR fmEPPj gCUrWJ"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dkrFOg IsHIT"
>
  <div
    className="sc-hLBbgP blDmMu"
  >
    🛌🛌
  </div>
  <button
    className="sc-bcXHqe sc-gswNZR eTvdtE gCUrWJ"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dkrFOg IsHIT"
>
  <div
    className="sc-hLBbgP blDmMu"
  >
    🍅
  </div>
  <button
    className="sc-bcXHqe sc-gswNZR eTvdtE gCUrWJ"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dkrFOg IsHIT"
>
  <div
    className="sc-hLBbgP blDmMu"
  >
    🛌
  </div>
  <button
    className="sc-bcXHqe sc-gswNZR eTvdtE gCUrWJ"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
